--- a/app/views/shared/_influencer_log_in_form.html.erb
+++ b/app/views/shared/_influencer_log_in_form.html.erb
@@ -74,7 +74,7 @@
             </div>
 
             <div class="input_container">
-              <input data-parsley-id="6021" data-parsley-pattern="^[\d\+\-\.\(\)\/\s]*$" class="new-modal-input" placeholder="Phone" data-parsley-required="true" data-parsley-trigger="change" name="user[phone]" id="user_phone" type="text">
+              <input data-parsley-id="6021" data-parsley-pattern="(^[\+]?[0-9]+[-]?[0-9]+[-]?[0-9]+$)" class="new-modal-input" placeholder="Phone" data-parsley-required="true" data-parsley-trigger="change" name="user[phone]" id="user_phone" type="text">
               <ul id="parsley-id-6021" class="parsley-errors-list"></ul>
             </div>
             <div class="input_container">
