make sing in/up form toggle successfully for both influence, brand sign in /sign up modal

--- a/app/views/shared/_brand_log_in_sign_up_form.html.erb
+++ b/app/views/shared/_brand_log_in_sign_up_form.html.erb
@@ -18,7 +18,7 @@
       <li class="display-inline"><a data-toggle="tab" href="#brand_sign_up">Sign Up</a></li>
     </ul>
 
-    <div id="brand_login" class="tab-pane fade in active">
+    <div id="brand_login" class="tab-pane fade-out active">
       <% if params[:controller] == 'public' %>
           <div id="sign-in-validation-error">
           </div>
@@ -49,7 +49,7 @@
     </div>
 
 
-    <div id="brand_sign_up" class="tab-pane fade">
+    <div id="brand_sign_up" class="tab-pane fade-out">
       <div class="row" id="brand-signup">
         <div class="col-md-12">
 
