--- a/app/views/shared/_influencer_log_in_sign_up_form.html.erb
+++ b/app/views/shared/_influencer_log_in_sign_up_form.html.erb
@@ -18,7 +18,7 @@
       <li class="display-inline"><a data-toggle="tab" href="#influencer_sign_up">Sign Up</a></li>
     </ul>
 
-    <div id="influencer_login" class="tab-pane fade in active">
+    <div id="influencer_login" class="tab-pane fade-out active">
       <button class="btn-modal" type="submit">
         Facebook
       </button>
@@ -28,7 +28,7 @@
     </div>
 
 
-    <div id="influencer_sign_up" class="tab-pane fade">
+    <div id="influencer_sign_up" class="tab-pane fade-out">
       <button class="btn-modal" type="submit">
         Facebook
       </button>
