change Login/Sign Up color according select item

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -2082,3 +2082,10 @@ div.modal-content{
   display: none;
 }
 
+.login-sign-up-ul li a{
+  color: #bcbdbf;
+}
+
+.login-sign-up-ul li.active a{
+  color: #00ADEF;
+}
