--- a/app/views/shared/_brand_log_in_sign_up_form.html.erb
+++ b/app/views/shared/_brand_log_in_sign_up_form.html.erb
@@ -14,7 +14,7 @@
     <h4>FOR BRANDS</h4>
 
     <ul class="login-sign-up-ul" id="brand_login_sign_up">
-      <li class="active display-inline"><a data-toggle="tab" href="#brand_login">Login</a></li> /
+      <li class="display-inline active "><a data-toggle="tab" href="#brand_login">Login</a></li> /
       <li class="display-inline"><a data-toggle="tab" href="#brand_sign_up">Sign Up</a></li>
     </ul>
 
