Influencer Sign up and Login form Css changed

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -2039,6 +2039,7 @@ div.modal-content{
   color: #00ADEF;
   margin-top: 20px;
   margin-right: 15px;
+  display: inline-block;
 
   @media (max-width: 767px) {
     width: 100%;
