--- a/app/views/shared/_influencer_log_in_sign_up_form.html.erb
+++ b/app/views/shared/_influencer_log_in_sign_up_form.html.erb
@@ -19,9 +19,9 @@
     </ul>
 
     <div id="influencer_login" class="tab-pane fade-out active">
-      <button class="btn-modal" type="submit">
-        Facebook
-      </button>
+      <%= link_to "Facebook &nbsp;#{image_tag('Fb-icon-modal.png')}".html_safe, user_omniauth_authorize_path('facebook'), :class => 'btn-modal'%>
+      </br>
+      </br>
       </br>
       </br>
       <div>Are you an Brand, please login <a href="#">here</a>.</div>
@@ -29,9 +29,9 @@
 
 
     <div id="influencer_sign_up" class="tab-pane fade-out">
-      <button class="btn-modal" type="submit">
-        Facebook
-      </button>
+      <%= link_to "Facebook &nbsp;#{image_tag('Fb-icon-modal.png')}".html_safe, user_omniauth_authorize_path('facebook'), :class => 'btn-modal'%>
+      </br>
+      </br>
       </br>
       </br>
       <div>Are you an Brand, please login <a href="#">here</a>.</div>
