- Responsive design fixed of log in and sign up page - page redirection added in Log in and Sign up modal

--- a/app/views/shared/_brand_log_in_sign_up_form.html.erb
+++ b/app/views/shared/_brand_log_in_sign_up_form.html.erb
@@ -45,9 +45,8 @@
 
       </br>
 
-      <div>Are you an Influencer, please login <a href="#">here</a>.</div>
+      <div>Are you an Influencer, please login <a href="<%= influencer_home_public_index_path %>">here</a>.</div>
     </div>
-
 
     <div id="brand_sign_up" class="tab-pane fade-out">
       <div class="row" id="brand-signup">
@@ -89,7 +88,7 @@
 
           </br>
 
-          <div>Are you an Influencer, please Sign up <a href="#">here</a>.</div>
+          <div>Are you an Influencer, please Sign up <a href="<%= influencer_home_public_index_path %>">here</a>.</div>
         </div>
       </div>
     </div>
