--- a/app/views/shared/_brand_log_in_sign_up_form.html.erb
+++ b/app/views/shared/_brand_log_in_sign_up_form.html.erb
@@ -14,11 +14,11 @@
     <h4>FOR BRANDS</h4>
 
     <ul class="login-sign-up-ul" id="brand_login_sign_up">
-      <li class="display-inline active "><a data-toggle="tab" href="#brand_login">Login</a></li> /
-      <li class="display-inline"><a data-toggle="tab" href="#brand_sign_up">Sign Up</a></li>
+      <li class="display-inline <%= 'active' if type == 'sign_in' %> "><a data-toggle="tab" href="#brand_login">Login</a></li> /
+      <li class="display-inline <%= 'active' if type == 'sign_up' %>"><a data-toggle="tab" href="#brand_sign_up">Sign Up</a></li>
     </ul>
 
-    <div id="brand_login" class="tab-pane fade-out active">
+    <div id="brand_login" class="tab-pane fade-out <%= 'active' if type == 'sign_in' %>">
       <% if params[:controller] == 'public' %>
           <div id="sign-in-validation-error">
           </div>
@@ -45,10 +45,11 @@
 
       </br>
 
-      <div>Are you an Influencer, please login <a href="<%= influencer_home_public_index_path %>">here</a>.</div>
+      <div>Are you an Influencer, please login <a href="<%= influencer_home_public_index_path(sign_up_modal: true)%>">here</a>.</div>
     </div>
 
-    <div id="brand_sign_up" class="tab-pane fade-out">
+
+    <div id="brand_sign_up" class="tab-pane fade-out <%= 'active' if type == 'sign_up' %>">
       <div class="row" id="brand-signup">
         <div class="col-md-12">
 
@@ -88,7 +89,7 @@
 
           </br>
 
-          <div>Are you an Influencer, please Sign up <a href="<%= influencer_home_public_index_path %>">here</a>.</div>
+          <div>Are you an Influencer, please Sign up <a href="<%= influencer_home_public_index_path(sign_up_modal: true)%>">here</a>.</div>
         </div>
       </div>
     </div>
