place appropriate link to sign in sign up modal here link

--- a/app/views/shared/_brand_log_in_sign_up_form.html.erb
+++ b/app/views/shared/_brand_log_in_sign_up_form.html.erb
@@ -45,7 +45,7 @@
 
       </br>
 
-      <div>Are you an Influencer, please login <a href="<%= influencer_home_public_index_path(sign_up_modal: true)%>">here</a>.</div>
+      <div>Are you an Influencer, please login <a href="<%= influencer_home_public_index_path(sign_in_modal: true)%>">here</a>.</div>
     </div>
 
 
