--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -121,6 +121,12 @@
 <%= render partial: 'shared/forgot_password'%>
 
 <div class="public-page-modal-container">
+  <% if params[:sign_in_modal] || params[:sign_up_modal] %>
+             <% type = params[:sign_in_modal] ? 'sign_in' : 'sign_up' %>
+
+             <%= render(:partial => 'shared/sign_in_modal',
+                                    :locals => { user_type: user_type, type: type }) %>
+  <% end %>
 </div>
 
 </body>
@@ -131,14 +137,7 @@
 <script>
     $(function () {
 //        show sing in modal
-        <% if params[:sign_in_modal]%>
-        $('#signin').modal('show');
-        <% end %>
-
-//        show sing up modal
-        <% if params[:sign_up_modal]%>
-        $('#signup').modal('show');
-        <% end %>
+             $('#signin').modal('show');
 
         $('#nav-contact-us a').click(function(){
             $('html, body').animate({
