--- a/app/views/shared/_influencer_log_in_sign_up_form.html.erb
+++ b/app/views/shared/_influencer_log_in_sign_up_form.html.erb
@@ -24,7 +24,7 @@
       </button>
       </br>
       </br>
-      <div>Are you an Brand, please login <a href="#">here</a>.</div>
+      <div>Are you an Brand, please login <a href="<%= brand_home_public_index_path(sign_in_modal: true) %>">here</a>.</div>
     </div>
 
 
@@ -34,7 +34,7 @@
       </button>
       </br>
       </br>
-      <div>Are you an Brand, please login <a href="#">here</a>.</div>
+      <div>Are you an Brand, please login <a href="<%= brand_home_public_index_path(sign_up_modal: true) %>">here</a>.</div>
     </div>
 
   </div>
