--- a/app/views/shared/_footer_home_page.html.erb
+++ b/app/views/shared/_footer_home_page.html.erb
@@ -23,7 +23,7 @@
 
               <div class="col-md-6 col-sm-6 col-xs-12 clear-padding-margin only-right-padding">
                 <div class="form-group">
-                  <input type="text" data-parsley-pattern="(^[\+]?[0-9]+[-]?[0-9]+[-]?[0-9]+$)" data-parsley-required="true" class="form-control" name="phone_number" placeholder="Phone Number"/>
+                  <input type="text" data-parsley-pattern="(^[\+]?[0-9]+[-]?[0-9]+[-]?[0-9]+$)" data-parsley-length = "[10, 14]" data-parsley-required="true" class="form-control" name="phone_number" placeholder="Phone Number"/>
                 </div>
               </div>
             </div>
