change modal name on registration create , so that it dive sing up form properly

--- a/app/views/registrations/create.js.erb
+++ b/app/views/registrations/create.js.erb
@@ -1,7 +1,7 @@
 $('.btn.has-spinner').removeClass('active');
 <% if @success %>
     $('#request-sent').modal('show');
-    $('#signup').modal('hide');
+    $('#signin').modal('hide');
 <% else %>
     console.log('---------------- render sign up errors-----------------------' );
     $('#success-message').html('');
