--- a/app/views/shared/_forgot_password.erb
+++ b/app/views/shared/_forgot_password.erb
@@ -1,30 +1,45 @@
 <div class="modal fade" id="forgotpassword">
   <div class="modal-dialog modal-md">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button area-label="Close" class="close first_close" data-dismiss="modal" tyle="button">
-          <i class="fa fa-times"></i>
-        </button>
-        <h3 class="modal-title">Reset Password</h3>
-      </div>
-      <div class="modal-body model-iner">
-        <div class="row">
-          <div class="col-md-12">
-            <div id="" class="text-danger validation-error"></div>
-            <div id="" class="text-success success-message"></div>
-            </br>
-            <form novalidate="" data-parsley-validate="true" class="new_user" id="new_user" action="/users/password" accept-charset="UTF-8" data-remote="true" method="post">
-              <input name="utf8" value="✓" type="hidden">
 
-              <p>PLease enter your registerd e-mail address</p>
+    <div class="modal-dialog modal-md new-modal-dialog">
+      <div class="modal-content new-modal-content">
+        <div class="new-modal-body__aside">
+          <a href="#"><%= image_tag('logo_white.svg', :class => 'img-responsive login-modal-logo', :alt => 'logo') %></a>
+          <div class="login-modal-aside-description">
+            Joining Brand Reach puts you in front of influencers from top industries that are searching to connect with brands like you.
+          </div>
+          <button area-label="Close" class="close new-modal-close display-none" id="new-modal-close-responsive" data-dismiss="modal" type="button">&times;</button>
+        </div>
 
-              <div class="input_container">
-                <div class="label_l">Email</div>
-                <input data-parsley-id="4091" data-parsley-required="true" class="login_input" name="user[email]" id="user_email" type="text">
+        <div class="new-modal-body__content">
+          <button area-label="Close" class="close new-modal-close" id="new-modal-close-button" data-dismiss="modal" type="button">&times;</button>
+          <div class="brand-login-modal-content-description">
+            <h4>FOR BRANDS</h4>
+            <div class="reset-password raleway-font">Reset Password</div>
+
+            <div class="row">
+              <div class="col-md-12">
+                <div id="" class="text-danger validation-error"></div>
+                <div id="" class="text-success success-message"></div>
+                </br>
+                <form novalidate="" data-parsley-validate="true" class="new_user" id="new_user" action="/users/password" accept-charset="UTF-8" data-remote="true" method="post">
+                  <input name="utf8" value="✓" type="hidden">
+
+                  <div class="input_container">
+                    <input data-parsley-id="4091" data-parsley-required="true" data-parsley-type="email" class="new-modal-input" placeholder="Please enter your registered email address" name="user[email]" id="user_email" type="text">
+                  </div>
+
+                  <button class="btn-modal" type="submit">
+                    Submit
+                  </button>
+
+                  </br>
+                  </br>
+                  <div><a href="<%= brand_home_public_index_path(sign_in_modal: true) %>">Go back</a> to the Login Screen.</div>
+                  <div>Are you an Influencer, please login <a href="<%= influencer_home_public_index_path(sign_in_modal: true)%>">here</a>.</div>
+                </form>
               </div>
-              <button class="br-btn-submit" type="submit">SUBMIT</button>
-              <p class="forgot_pwd">&nbsp;</p>
-            </form>
+            </div>
           </div>
         </div>
       </div>
