- Influencers/Brand modal anchor tag underline removed - Email id not found message change

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -2010,6 +2010,10 @@ div.modal-content{
       padding: 45px 30px;
       margin-left: 42%;
 
+      & a.btn-modal {
+        text-decoration: none;
+      }
+
       .reset-password {
         color: #00ADEF;
         font-size: 16px;
