--- a/app/views/shared/_brand_log_in_sign_up_form.html.erb
+++ b/app/views/shared/_brand_log_in_sign_up_form.html.erb
@@ -11,7 +11,7 @@
 <div class="new-modal-body__content">
   <button area-label="Close" class="close new-modal-close" id="new-modal-close-button" data-dismiss="modal" type="button">&times;</button>
   <div class="brand-login-modal-content-description">
-    <h4>FOR BRANDS</h4>
+    <div class="new-modal-title">FOR BRANDS</div>
 
     <ul class="login-sign-up-ul" id="brand_login_sign_up">
       <li class="display-inline js-sign-in <%= 'active' if type == 'sign_in' %> "><a data-toggle="tab" href="#login">Login</a></li> /
