--- a/app/views/shared/_forgot_password.erb
+++ b/app/views/shared/_forgot_password.erb
@@ -1,8 +1,8 @@
-<div class="modal fade" id="forgotpassword">
-  <div class="modal-dialog modal-md">
+<div class="modal new-modal fade in" id="forgotpassword">
 
     <div class="modal-dialog modal-md new-modal-dialog">
       <div class="modal-content new-modal-content">
+
         <div class="new-modal-body__aside">
           <a href="#"><%= image_tag('logo_white.svg', :class => 'img-responsive login-modal-logo', :alt => 'logo') %></a>
           <div class="login-modal-aside-description">
@@ -14,7 +14,7 @@
         <div class="new-modal-body__content">
           <button area-label="Close" class="close new-modal-close" id="new-modal-close-button" data-dismiss="modal" type="button">&times;</button>
           <div class="brand-login-modal-content-description">
-            <h4>FOR BRANDS</h4>
+            <div class="new-modal-title">FOR BRANDS</div>
             <div class="reset-password raleway-font">Reset Password</div>
 
             <div class="row">
@@ -44,5 +44,4 @@
         </div>
       </div>
     </div>
-  </div>
 </div>
