--- a/app/views/shared/_influencer_log_in_sign_up_form.html.erb
+++ b/app/views/shared/_influencer_log_in_sign_up_form.html.erb
@@ -3,7 +3,7 @@
 <div class="new-modal-body__aside">
   <a href="#"><%= image_tag('logo_white.svg', :class => 'img-responsive login-modal-logo', :alt => 'logo') %></a>
   <div class="login-modal-aside-description">
-    Joining Brand Reach puts you in front of influencers from top industries that are searching to connect with brands like you.
+    Joining Brand Reach puts you in front of marketers from top brands that are searching to connect with influencers like you.
   </div>
   <button area-label="Close" class="close new-modal-close display-none" id="new-modal-close-responsive" data-dismiss="modal" type="button">&times;</button>
 </div>
@@ -11,7 +11,7 @@
 <div class="new-modal-body__content">
   <button area-label="Close" class="close new-modal-close" id="new-modal-close-button" data-dismiss="modal" type="button">&times;</button>
   <div class="brand-login-modal-content-description">
-    <h4>FOR INFLUENCERS</h4>
+    <div class="new-modal-title">FOR INFLUENCERS</div>
 
     <ul class="login-sign-up-ul" id="influencer_login_sign_up">
       <li class="display-inline js-sign-in <%= 'active' if type == 'sign_in' %>"><a data-toggle="tab" href="#login">Login</a></li> /
