--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -8,9 +8,9 @@
           <p>Your sign up process is almost complete. Just set your password and start to use it.</p>
           <br/>
           <br/>
-          <p>Please set your password.</p>
+          <p>Please set your password</p>
       <% else %>
-          <h2>Change your password.</h2>
+          <h2>Change your password</h2>
       <% end %>
       <%= form_for(resource, as: resource_name, url: password_path(resource_name), data: {:'parsley-validate' => ''}, html: {method: :put}) do |f| %>
           <%= devise_error_messages! %>
