open influence profile facebook link on new tab

--- a/app/views/influencers/_profile_modal.erb
+++ b/app/views/influencers/_profile_modal.erb
@@ -93,7 +93,7 @@
         <div class="social-media-info font-raleway"> Social Media Information</div>
         <p>
           <span class="view-profile-fb-twitter-color">Facebook:</span>
-          <a href="<%= "https://www.facebook.com/app_scoped_user_id/#{account.influencer.uid}/" %>">
+          <a href="<%= "https://www.facebook.com/app_scoped_user_id/#{account.influencer.uid}/" %>" target="_blank">
             <%= "https://www.facebook.com/app_scoped_user_id/#{account.influencer.uid}/" %>
           </a>
         </p>
